--- a/views/add_listing.ejs
+++ b/views/add_listing.ejs
@@ -26,7 +26,7 @@
     <div class="row">
         <div class="mb-3 col-md-4 col-12">
             <label for="price" class="form-label">Price</label>
-            <input type="text" required class="form-control" id="price" name="price">
+            <input type="number" required class="form-control" id="price" name="price">
             <div class="valid-feedback">Looks good!</div>
             <div class="invalid-feedback">Kindly enter correct value</div>
         </div>
