--- a/views/show.ejs
+++ b/views/show.ejs
@@ -4,7 +4,8 @@
 <div class="row">
     <div class="col-8 offset-2">
         <div class="card">
-            <img src="<%= fetchedListing.image %>" class="card-img-top show-image" alt="<%= fetchedListing.title %>">
+            <img src="<%= fetchedListing.image %>" class="card-img-top show-image" alt="<%= fetchedListing.title %>"
+                 onerror="this.onerror=null;this.src='https://images.unsplash.com/photo-1643266421634-467f26f84b56?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D';">
             <div class="card-body">
                 <p class="card-text"><b><%= fetchedListing.title %></b></p>
                 <p class="card-text"><i><%= fetchedListing.description %></i></p>
@@ -16,13 +17,43 @@
                     <li class="list-group-item">&#x1F30D;&nbsp;&nbsp;<b>Country:</b> <%= fetchedListing.country %></li>
                 </ul>
                 <div style="display: flex; justify-content: center; margin-top: 2rem;">
-                    <a style="margin-right: 0.5rem; width: 50%" href="/<%= fetchedListing.id %>/edit" class="btn btn-primary">Edit</a>
+                    <a style="margin-right: 0.5rem; width: 50%" href="/<%= fetchedListing.id %>/edit"
+                       class="btn btn-primary"><i class="fas fa-edit"></i> Edit</a>
                     <form method="POST" id="deleteFormMain" style="margin-right: 0.5rem; width: 50%">
-                        <button style="margin-right: 0.5rem; width: 100%" class="btn btn-danger" type="button" data-id="<%= fetchedListing.id %>"
-                                onclick="deleteListing(this);">Delete
+                        <button style="margin-right: 0.5rem; width: 100%" class="btn btn-danger" type="button"
+                                data-id="<%= fetchedListing.id %>"
+                                onclick="deleteListing(this);"><i class="fas fa-trash"></i> Delete
                         </button>
                     </form>
                 </div>
+                <% if(fetchedListing.reviews.length > 0) { %>
+                    <br>
+                <h5><i>Reviews (<%= fetchedListing.reviews.length %>)</i></h5>
+                <div class="row mt-3">
+                    <% for(let review of fetchedListing.reviews) { %>
+                        <div class="col-sm-6 mb-3">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5 class="card-title"><%= review.rating %> Star Review
+                                        (<%= review.createdAt.toDateString() %>)</h5>
+                                    <p class="card-text"><%= review.comment %></p>
+                                    <div style="display: flex; justify-content: end">
+                                        <button class="btn btn-primary align-right me-2"><i class="fas fa-edit"></i>
+                                            Edit
+                                        </button>
+                                        <form style="display: flex; justify-content: end" method="POST" action="/review/<%= fetchedListing.id %>/<%= review.id %>?_method=DELETE" style="margin-right: 0.5rem; width: 50%">
+                                            <button type="submit" class="btn btn-danger"><i class="fas fa-trash"></i> Trash</button>
+                                        </form>
+
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                    <% } %>
+                </div>
+                <% } %>
+
             </div>
         </div>
     </div>
