--- a/views/login.ejs
+++ b/views/login.ejs
@@ -47,7 +47,7 @@
                   </div>
                   <div class="mt-3 d-flex justify-content-between">
                     <button type="submit" class="btn btn-outline-primary">Log in</button>
-                    <a href="/forgot-password" class="btn btn-outline-warning">Forgot Password</a>
+                    <button type="button" class="btn btn-outline-warning" data-bs-toggle="modal" data-bs-target="#resetPasswordModal"> Reset Password</button>
                     <a href="/register" class="btn btn-outline-success">Register</a>
                   </div>
                 </form>
@@ -72,7 +72,7 @@
 
                   <div class="mt-3 d-flex justify-content-between">
                     <button type="submit" class="btn btn-outline-primary">Log in</button>
-                    <a href="/forgot-password" class="btn btn-outline-warning">Forgot Password</a>
+                    <button type="button" class="btn btn-outline-warning" data-bs-toggle="modal" data-bs-target="#resetPasswordModal"> Reset Password</button>
                     <a href="/register" class="btn btn-outline-success">Register</a>
                   </div>
                 </form>
@@ -84,4 +84,5 @@
     </div>
   </div>
 </section>
+<%- include('reset-password.ejs'); %>
 <%- include('auth-footer.ejs'); %>
