--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -6,11 +6,13 @@
             <div class="col-12 col-md-6 col-xl-7">
                 <div class="d-flex justify-content-center text-bg-primary">
                     <div class="col-12 col-xl-9">
-                        <img class="img-fluid rounded mb-4" loading="lazy" src="https://www.iskconcommunications.org/images/faviconiskcon.png" width="245"
+                        <img class="img-fluid rounded mb-4" loading="lazy"
+                             src="https://www.iskconcommunications.org/images/faviconiskcon.png" width="245"
                              height="80" alt="Travel Logo">
                         <hr class="border-primary-subtle mb-4">
                         <h2 class="h1 mb-4">Join Us to Elevate Your Travel Experience!</h2>
-                        <p class="lead mb-5">Sign up to unlock personalized itineraries, expert travel insights, inspiring destinations, and innovative vacation planning tools.</p>
+                        <p class="lead mb-5">Sign up to unlock personalized itineraries, expert travel insights,
+                            inspiring destinations, and innovative vacation planning tools.</p>
                     </div>
                 </div>
             </div>
@@ -19,32 +21,43 @@
                     <div class="card-body p-3 p-md-4 p-xl-5">
                         <ul class="nav nav-tabs mb-4" id="registerTabs" role="tablist">
                             <li class="nav-item" role="presentation">
-                                <button class="nav-link active" id="traveler-tab" data-bs-toggle="tab" data-bs-target="#traveler" type="button" role="tab" aria-controls="traveler" aria-selected="true">Signup as Traveler</button>
+                                <button class="nav-link active" id="traveler-tab" data-bs-toggle="tab"
+                                        data-bs-target="#traveler" type="button" role="tab" aria-controls="traveler"
+                                        aria-selected="true">Signup as Traveler
+                                </button>
                             </li>
                             <li class="nav-item" role="presentation">
-                                <button class="nav-link" id="host-tab" data-bs-toggle="tab" data-bs-target="#host" type="button" role="tab" aria-controls="host" aria-selected="false">Signup as Admin</button>
+                                <button class="nav-link" id="host-tab" data-bs-toggle="tab" data-bs-target="#host"
+                                        type="button" role="tab" aria-controls="host" aria-selected="false">Signup as
+                                    Admin
+                                </button>
                             </li>
                         </ul>
                         <div class="tab-content" id="registerTabsContent">
                             <!-- Traveler Registration -->
-                            <div class="tab-pane fade show active" id="traveler" role="tabpanel" aria-labelledby="traveler-tab">
+                            <div class="tab-pane fade show active" id="traveler" role="tabpanel"
+                                 aria-labelledby="traveler-tab">
                                 <h3>Register as Traveler</h3>
                                 <form action="/register" method="post">
                                     <div class="mb-3">
                                         <label for="traveler-name" class="form-label">Name</label>
-                                        <input type="text" class="form-control" id="traveler-name" name="user[name]" placeholder="Your Name" required>
+                                        <input type="text" class="form-control" id="traveler-name" name="user[name]"
+                                               placeholder="Your Name" required>
                                     </div>
                                     <div class="mb-3">
                                         <label for="traveler-email" class="form-label">Email</label>
-                                        <input type="email" class="form-control" id="traveler-email" name="user[username]" placeholder="name@example.com" required>
+                                        <input type="email" class="form-control" id="traveler-email"
+                                               name="user[username]" placeholder="name@example.com" required>
                                     </div>
                                     <div class="mb-3">
                                         <label for="traveler-mobile" class="form-label">Mobile</label>
-                                        <input type="tel" class="form-control" id="traveler-mobile" name="user[mobile]" placeholder="1234567890" required>
+                                        <input type="tel" class="form-control" id="traveler-mobile" name="user[mobile]"
+                                               placeholder="1234567890" required>
                                     </div>
                                     <div class="mb-3">
                                         <label for="traveler-password" class="form-label">Password</label>
-                                        <input type="password" class="form-control" id="traveler-password" name="user[password]" placeholder="Password" required>
+                                        <input type="password" class="form-control" id="traveler-password"
+                                               name="user[password]" placeholder="Password" required>
                                     </div>
                                     <div class="form-check mb-3">
                                         <input class="form-check-input" type="checkbox" id="traveler-terms" required>
@@ -52,7 +65,13 @@
                                             I agree to the <a href="#">Terms and Conditions</a>
                                         </label>
                                     </div>
-                                    <button type="submit" class="btn btn-primary">Sign up</button>
+                                    <div class="mt-3 d-flex justify-content-between">
+                                        <button type="submit" class="btn btn-outline-primary">Sign up</button>
+                                        <button type="button" class="btn btn-outline-warning" data-bs-toggle="modal"
+                                                data-bs-target="#resetPasswordModal"> Reset Password
+                                        </button>
+                                        <a href="/login" class="btn btn-outline-success">Log in</a>
+                                    </div>
                                 </form>
                             </div>
 
@@ -62,19 +81,23 @@
                                 <form action="#">
                                     <div class="mb-3">
                                         <label for="host-name" class="form-label">Name</label>
-                                        <input type="text" class="form-control" id="host-name" placeholder="Your Name" required>
+                                        <input type="text" class="form-control" id="host-name" placeholder="Your Name"
+                                               required>
                                     </div>
                                     <div class="mb-3">
                                         <label for="host-email" class="form-label">Email</label>
-                                        <input type="email" class="form-control" id="host-email" placeholder="name@example.com" required>
+                                        <input type="email" class="form-control" id="host-email"
+                                               placeholder="name@example.com" required>
                                     </div>
                                     <div class="mb-3">
                                         <label for="host-mobile" class="form-label">Mobile</label>
-                                        <input type="tel" class="form-control" id="host-mobile" placeholder="1234567890" required>
+                                        <input type="tel" class="form-control" id="host-mobile" placeholder="1234567890"
+                                               required>
                                     </div>
                                     <div class="mb-3">
                                         <label for="host-password" class="form-label">Password</label>
-                                        <input type="password" class="form-control" id="host-password" placeholder="Password" required>
+                                        <input type="password" class="form-control" id="host-password"
+                                               placeholder="Password" required>
                                     </div>
                                     <div class="form-check mb-3">
                                         <input class="form-check-input" type="checkbox" id="host-terms" required>
@@ -82,7 +105,13 @@
                                             I agree to the <a href="#">Terms and Conditions</a>
                                         </label>
                                     </div>
-                                    <button type="submit" class="btn btn-primary">Sign up</button>
+                                    <div class="mt-3 d-flex justify-content-between">
+                                        <button type="submit" class="btn btn-outline-primary">Sign up</button>
+                                        <button type="button" class="btn btn-outline-warning" data-bs-toggle="modal"
+                                                data-bs-target="#resetPasswordModal"> Reset Password
+                                        </button>
+                                        <a href="/login" class="btn btn-outline-success">Log in</a>
+                                    </div>
                                 </form>
                             </div>
                         </div>
@@ -92,4 +121,5 @@
         </div>
     </div>
 </section>
+<%- include('reset-password.ejs'); %>
 <%- include('auth-footer.ejs'); %>
