--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -99,6 +99,7 @@
         integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
         crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 <script>
 	let showToast = "<%= showToast %>";
 	let toastMessage = "<%= toastMessage %>";
@@ -137,6 +138,9 @@
 
 			} // Callback after click
 		}).showToast();
+	}
+	else if (showToast === "alert" && toastMessage.length > 3) {
+		Swal.fire(toastMessage);
 	}
 	else {
 		console.log("NO MESSAGE TO SHOW");
