--- a/views/list-card.ejs
+++ b/views/list-card.ejs
@@ -12,11 +12,19 @@
         </ul>
         <div style="display: flex; justify-content: center; flex-wrap: wrap">
             <a style="margin-right: 0.5rem" href="/<%= listData.id %>" class="btn btn-warning"><i class="fas fa-eye" style="color:white"></i> View</a>
-            <a style="margin-right: 0.5rem" href="/<%= listData.id %>/edit" class="btn btn-primary"><i class="fas fa-edit"></i> Edit</a>
-            <form method="POST" id="deleteFormMain" style="margin-top: 0.5rem">
-                <button class="btn btn-danger" type="button" data-id="<%= listData.id %>" onclick="deleteListing(this);"><i class="fas fa-trash"></i> Delete</button>
-            </form>
-            <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#reviewModal" data-bs-title="<%= listData.title %>" data-bs-id="<%= listData.id %>" style="margin: 0.5rem;"> <i class="fa fa-commenting-o"></i> Comment</button>
+
+            <% if(listData.createdBy) {  if(userAdmin || userId === listData.createdBy.id) { %>
+                <a style="margin-right: 0.5rem" href="/<%= listData.id %>/edit" class="btn btn-primary"><i class="fas fa-edit"></i> Edit</a>
+                <form method="POST" id="deleteFormMain" style="margin-top: 0.5rem">
+                    <button class="btn btn-danger" type="button" data-id="<%= listData.id %>" onclick="deleteListing(this);"><i class="fas fa-trash"></i> Delete</button>
+                </form>
+            <% } %>
+           <% if(userName!== "---" && userAdmin === false && userId !== listData.createdBy.id) { %>
+                <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#reviewModal" data-bs-title="<%= listData.title %>" data-bs-id="<%= listData.id %>" > <i class="fa fa-commenting-o"></i> Comment</button>
+            <% } } %>
+
+
+
         </div>
 
     </div>
