--- a/views/login.ejs
+++ b/views/login.ejs
@@ -32,14 +32,14 @@
               <!-- Traveler Login -->
               <div class="tab-pane fade show active" id="traveler" role="tabpanel" aria-labelledby="traveler-tab">
                 <h3>Login as Traveler</h3>
-                <form action="/login" method="post">
+                <form action="/login?forward=<%= forward %>" method="post">
                   <div class="mb-3">
                     <label for="traveler-email" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="traveler-email" name="username" placeholder="name@example.com" required>
+                    <input type="email" class="form-control" id="traveler-email" name="username" value="manishtalreja189@gmail.com" placeholder="name@example.com" required>
                   </div>
                   <div class="mb-3">
                     <label for="traveler-password" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="traveler-password" name="password" placeholder="Password" required>
+                    <input type="password" class="form-control" id="traveler-password" name="password" value="111111" placeholder="Password" required>
                   </div>
                   <div class="form-check mb-3">
                     <input class="form-check-input" type="checkbox" id="traveler-remember">
@@ -48,7 +48,7 @@
                   <div class="mt-3 d-flex justify-content-between">
                     <button type="submit" class="btn btn-outline-primary">Log in</button>
                     <button type="button" class="btn btn-outline-warning" data-bs-toggle="modal" data-bs-target="#resetPasswordModal"> Reset Password</button>
-                    <a href="/register" class="btn btn-outline-success">Register</a>
+                    <a href="/register?forward=<%= forward %>" class="btn btn-outline-success">Register</a>
                   </div>
                 </form>
               </div>
@@ -73,7 +73,7 @@
                   <div class="mt-3 d-flex justify-content-between">
                     <button type="submit" class="btn btn-outline-primary">Log in</button>
                     <button type="button" class="btn btn-outline-warning" data-bs-toggle="modal" data-bs-target="#resetPasswordModal"> Reset Password</button>
-                    <a href="/register" class="btn btn-outline-success">Register</a>
+                    <a href="/register?forward=<%= forward %>" class="btn btn-outline-success">Register</a>
                   </div>
                 </form>
               </div>
