--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,13 +1,68 @@
-<nav class="navbar bg-body-tertiary sticky-top mb-3">
+<nav class="navbar bg-body-tertiary sticky-top">
     <div class="container-fluid">
         <a class="navbar-brand" href="/">
             <img src="https://www.iskconcommunications.org/images/faviconiskcon.png" alt="Logo" width="30" height="30"
-                 class="d-inline-block align-text-top">
+                 class="d-inline-block align-text-top"/>
             HARE KRSNA LAND
         </a>
-        <form class="d-flex" role="search" action="." method="get">
-            <input class="form-control me-2" type="search" name="search" value="<%= search %>" placeholder="Search Vacation Spots" aria-label="Search">
+        <form class="d-flex align-items-center ms-auto" role="search" action="." method="get">
+            <input class="form-control me-2" type="search" name="search" value="<%= search %>"
+                   placeholder="Search Vacation Spots" aria-label="Search"/>
             <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
+        <% if(userName === '---') { %>
+            <div class="d-flex align-items-center ms-auto">
+                <div class="d-flex align-items-center">
+
+                    <div class="ms-3 d-none d-md-none d-lg-block">
+                        <a style="text-decoration: none" href="/login" class="text-dark">Login</a>
+                    </div>
+                    <div class="ms-3 d-none d-md-none d-lg-block">
+                        <a style="text-decoration: none" class="btn btn-primary rounded-pill btn-sm" href="/register">Sign
+                            Up</a>
+                    </div>
+                </div>
+            </div>
+        <% } else { %>
+
+            <div class="d-flex align-items-center ms-auto">
+                <div class="dropdown me-3 position-relative">
+                    <a style="text-decoration: none;" href="#" class="text-reset" id="notificationsDropdown"
+                       data-bs-toggle="dropdown" aria-expanded="false">
+                        <img src="https://cdn-icons-png.flaticon.com/512/1592/1592461.png" height="40" width="40">
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="notificationsDropdown"
+                        style="max-height: 300px; overflow-y: auto;">
+                        <li><a class="dropdown-item" href="#">Notification 1</a></li>
+                        <li><a class="dropdown-item" href="#">Notification 2</a></li>
+                        <li><a class="dropdown-item" href="#">Notification 3</a></li>
+                        <li><a class="dropdown-item" href="#">Notification 4</a></li>
+                        <li><a class="dropdown-item" href="#">Notification 5</a></li>
+                        <li><a class="dropdown-item" href="#">Notification 6</a></li>
+                        <li><a class="dropdown-item" href="#">Notification 7</a></li>
+                        <li><a class="dropdown-item" href="#">Notification 8</a></li>
+                        <li><a class="dropdown-item" href="#">Notification 9</a></li>
+                        <li><a class="dropdown-item" href="#">Notification 10</a></li>
+                    </ul>
+                </div>
+
+
+                <div class="dropdown me-3">
+                    <a href="#" style="text-decoration: none" class="d-flex align-items-center text-reset"
+                       id="profileDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                        <img src="https://pngimg.com/d/smiley_PNG144.png" height="40" width="40">
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
+                        <li><a class="dropdown-item" href="#">My Profile</a></li>
+                        <li><a class="dropdown-item" href="#">Settings</a></li>
+                        <li><a class="dropdown-item" href="/logout">Logout</a></li>
+                    </ul>
+                </div>
+                <!-- Added welcome message -->
+                <span class="me-3 fw-bold font-italic"> <%= userName %></span>
+            </div>
+
+        <% } %>
+
     </div>
 </nav>
