--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -38,7 +38,7 @@
                             <div class="tab-pane fade show active" id="traveler" role="tabpanel"
                                  aria-labelledby="traveler-tab">
                                 <h3>Register as Traveler</h3>
-                                <form action="/register" method="post">
+                                <form action="/register?forward=<%= forward %>" method="post">
                                     <div class="mb-3">
                                         <label for="traveler-name" class="form-label">Name</label>
                                         <input type="text" class="form-control" id="traveler-name" name="user[name]"
@@ -70,7 +70,7 @@
                                         <button type="button" class="btn btn-outline-warning" data-bs-toggle="modal"
                                                 data-bs-target="#resetPasswordModal"> Reset Password
                                         </button>
-                                        <a href="/login" class="btn btn-outline-success">Log in</a>
+                                        <a href="/login?forward=<%= forward %>" class="btn btn-outline-success">Log in</a>
                                     </div>
                                 </form>
                             </div>
@@ -110,7 +110,7 @@
                                         <button type="button" class="btn btn-outline-warning" data-bs-toggle="modal"
                                                 data-bs-target="#resetPasswordModal"> Reset Password
                                         </button>
-                                        <a href="/login" class="btn btn-outline-success">Log in</a>
+                                        <a href="/login?forward=<%= forward %>" class="btn btn-outline-success">Log in</a>
                                     </div>
                                 </form>
                             </div>
