--- a/views/pages/edit-listing.ejs
+++ b/views/pages/edit-listing.ejs
@@ -1,5 +1,5 @@
-<%- include('header.ejs'); %>
-<%- include('navbar.ejs'); %>
+<%- include('../partials/header.ejs'); %>
+<%- include('../partials/navbar.ejs'); %>
 
 <h1 style="text-align: center; margin: 1rem">Edit Your Listings</h1>
 <form style="margin: 1rem; border-radius: 10px; border: 2px solid black; padding: 1rem;"
@@ -44,4 +44,4 @@
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
-<%- include('footer.ejs'); %>
+<%- include('../partials/footer.ejs'); %>
