--- a/views/pages/error-page.ejs
+++ b/views/pages/error-page.ejs
@@ -1,4 +1,4 @@
-<%- include('header.ejs'); %>
+<%- include('../partials/header.ejs'); %>
 
 <div class="d-flex align-items-center justify-content-center vh-100">
     <div class="text-center">
