--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -1,4 +1,4 @@
-<%- include('header.ejs'); %>
+<%- include('../partials/header.ejs'); %>
 <section class="bg-primary py-3 py-md-5 py-xl-8">
   <div class="container">
     <div class="row gy-4 align-items-center">
@@ -84,5 +84,5 @@
     </div>
   </div>
 </section>
-<%- include('reset-password.ejs'); %>
-<%- include('auth-footer.ejs'); %>
+<%- include('../modals/reset-password.ejs'); %>
+<%- include('../partials/auth-footer.ejs'); %>
