--- a/views/pages/show.ejs
+++ b/views/pages/show.ejs
@@ -1,5 +1,5 @@
-<%- include('header.ejs'); %>
-<%- include('navbar.ejs'); %>
+<%- include('../partials/header.ejs'); %>
+<%- include('../partials/navbar.ejs'); %>
 <h1 style="text-align: center;margin: 1rem;">Listing Details</h1>
 <div class="row">
     <div class="col-8 offset-2">
@@ -68,4 +68,4 @@
 </div>
 
 
-<%- include('footer.ejs'); %>
+<%- include('../partials/footer.ejs'); %>
