--- a/views/pages/signup.ejs
+++ b/views/pages/signup.ejs
@@ -1,4 +1,4 @@
-<%- include('header.ejs'); %>
+<%- include('../partials/header.ejs'); %>
 <!-- Signup Page -->
 <section class="bg-primary py-3 py-md-5 py-xl-8">
     <div class="container">
@@ -121,5 +121,5 @@
         </div>
     </div>
 </section>
-<%- include('reset-password.ejs'); %>
-<%- include('auth-footer.ejs'); %>
+<%- include('../modals/reset-password.ejs'); %>
+<%- include('../partials/auth-footer.ejs'); %>
