--- a/views/modals/reset-password.ejs
+++ b/views/modals/reset-password.ejs
@@ -2,7 +2,7 @@
      aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
-            <form action="/resetPassword" method="post" id="resetForm">
+            <form action="/sendResetPasswordEmail" method="post" id="resetForm">
                 <div class="modal-header">
                     <h5 class="modal-title" id="resetPasswordModalLabel">Reset Your Password</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
