--- a/views/pages/add-listing.ejs
+++ b/views/pages/add-listing.ejs
@@ -1,5 +1,5 @@
-<%- include('header.ejs'); %>
-<%- include('navbar.ejs'); %>
+<%- include('../partials/header.ejs'); %>
+<%- include('../partials/navbar.ejs'); %>
 
 <h1 style="text-align: center; margin: 1rem">Add Your Listings</h1>
 <form novalidate class="needs-validation"
@@ -50,4 +50,4 @@
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
-<%- include('footer.ejs'); %>
+<%- include('../partials/footer.ejs'); %>
