--- a/views/partials/list-card.ejs
+++ b/views/partials/list-card.ejs
@@ -13,13 +13,13 @@
         <div style="display: flex; justify-content: center; flex-wrap: wrap">
             <a style="margin-right: 0.5rem" href="/<%= listData.id %>" class="btn btn-warning"><i class="fas fa-eye" style="color:white"></i> View</a>
 
-            <% if(listData.createdBy) {  if(userAdmin || userId === listData.createdBy.id) { %>
+            <% if(listData.createdBy && loggedInUser) {  if(loggedInUser.isAdmin || loggedInUser.id === listData.createdBy.id) { %>
                 <a style="margin-right: 0.5rem" href="/<%= listData.id %>/edit" class="btn btn-primary"><i class="fas fa-edit"></i> Edit</a>
                 <form method="POST" id="deleteFormMain" style="margin-top: 0.5rem">
                     <button class="btn btn-danger" type="button" data-id="<%= listData.id %>" onclick="deleteListing(this);"><i class="fas fa-trash"></i> Delete</button>
                 </form>
             <% } %>
-           <% if(userName!== "---" && userAdmin === false && userId !== listData.createdBy.id) { %>
+           <% if(loggedInUser.username!== "---" && loggedInUser.isAdmin === false && loggedInUser.id !== listData.createdBy.id) { %>
                 <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#reviewModal" data-bs-title="<%= listData.title %>" data-bs-id="<%= listData.id %>" > <i class="fa fa-commenting-o"></i> Comment</button>
             <% } } %>
 
