--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -49,7 +49,7 @@
                     </ul>
                 </div>
                 <!-- Added welcome message -->
-                <span class="me-3 fw-bold font-italic"> <%= loggedInUser.username %></span>
+                <span class="me-3 fw-bold font-italic"> <%= loggedInUser.name %></span>
             </div>
 
 
