--- a/views/modals/review.ejs
+++ b/views/modals/review.ejs
@@ -1,3 +1,4 @@
+<%- include('../partials/header.ejs'); %>
 <div class="modal fade" id="reviewModal" tabindex="-1" aria-labelledby="reviewModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -10,8 +11,22 @@
 
                     <div class="mb-3">
                         <label for="rating" class="col-form-label">Rating (1-5):</label>
-                        <input type="number" min="0" max="5" maxlength="1" class="form-control" required id="rating"
-                               name="review[rating]">
+                        <fieldset class="starability-heartbeat mt-2" style="min-height: 20px">
+                            <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked
+                                   aria-label="No rating."/>
+                            <input type="radio" id="first-rate1" name="review[rating]" value="1"/>
+                            <label for="first-rate1" title="Terrible">1 star</label>
+                            <input type="radio" id="first-rate2" name="review[rating]" value="2"/>
+                            <label for="first-rate2" title="Not good">2 stars</label>
+                            <input type="radio" id="first-rate3" name="review[rating]" value="3"/>
+                            <label for="first-rate3" title="Average">3 stars</label>
+                            <input type="radio" id="first-rate4" name="review[rating]" value="4"/>
+                            <label for="first-rate4" title="Very good">4 stars</label>
+                            <input type="radio" id="first-rate5" name="review[rating]" value="5"/>
+                            <label for="first-rate5" title="Amazing">5 stars</label>
+                        </fieldset>
+                        <!--<input type="number" min="0" max="5" maxlength="1" class="form-control" required id="rating"
+                               name="review[rating]">-->
                     </div>
                     <div class="mb-3">
                         <label for="comment" class="col-form-label">Comment:</label>
