--- a/views/pages/add-listing.ejs
+++ b/views/pages/add-listing.ejs
@@ -3,7 +3,7 @@
 
 <h1 style="text-align: center; margin: 1rem">Add Your Listings</h1>
 <form novalidate class="needs-validation"
-      style="margin: 1rem; border-radius: 10px; border: 2px solid black; padding: 1rem;" action="/" method="post">
+      style="margin: 1rem; border-radius: 10px; border: 2px solid black; padding: 1rem;" action="/" method="post" enctype="multipart/form-data">
     <div class="mb-3">
         <label for="title" class="form-label">Title</label>
         <input type="text" required class="form-control" id="title" name="title">
@@ -18,7 +18,7 @@
     </div>
     <div class="mb-3">
         <label for="image" class="form-label">Image</label>
-        <input type="url" class="form-control" id="image" name="image" aria-describedby="imageHelp">
+        <input type="file" class="form-control" id="image" name="image" aria-describedby="imageHelp">
         <div id="imageHelp" class="form-text">Kindly enter image link url here</div>
         <div class="valid-feedback">Looks good!</div>
         <div class="invalid-feedback">Kindly enter correct value</div>
