--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -32,5 +32,6 @@
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
             rel="stylesheet"
     />
+    <link rel="stylesheet" href="/rating.css">
 </head>
 <body>
