--- a/views/pages/add-listing.ejs
+++ b/views/pages/add-listing.ejs
@@ -31,8 +31,9 @@
             <div class="invalid-feedback">Kindly enter correct value</div>
         </div>
         <div class="mb-3 col-md-4 col-12">
-            <label for="location" class="form-label">Location</label>
+            <label for="location" class="form-label">Map Location</label>
             <input type="text" required class="form-control" id="location" name="location">
+            <input type="hidden" required class="form-control" id="coordinates" name="coordinates">
             <div class="valid-feedback">Looks good!</div>
             <div class="invalid-feedback">Kindly enter correct value</div>
         </div>
