--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -71,41 +71,156 @@
     </footer>
 </div>
 <script>
-	// Example starter JavaScript for disabling form submissions if there are invalid fields
 	(() => {
 		'use strict'
-
-		// Fetch all the forms we want to apply custom Bootstrap validation styles to
 		const forms = document.querySelectorAll('.needs-validation')
-
-		// Loop over them and prevent submission
 		Array.from(forms).forEach(form => {
 			form.addEventListener('submit', event => {
 				if (!form.checkValidity()) {
 					event.preventDefault()
 					event.stopPropagation()
 				}
-
 				form.classList.add('was-validated')
 			}, false)
 		})
 	})()
 </script>
 <script>
-    let latitude = "<%= latitude %>";
+	let latitude = "<%= latitude %>";
 	let longitude = "<%= longitude %>";
-    function initMap() {
-	new google.maps.Map(
-		document.getElementById("map"), {
-			zoom: 17.50,
-			center: {
-				lat: parseFloat(latitude) || 19.2856,
-				lng: parseFloat(longitude) || 72.8691
+
+	function initMap() {
+
+		// CODE FOR MAP INITIALIZATION
+		const map = new google.maps.Map(
+			document.getElementById("map"), {
+				zoom: 17.50,
+				center: {
+					lat: parseFloat(latitude),
+					lng: parseFloat(longitude)
+				},
+				styles: [
+					{elementType: "geometry", stylers: [{color: "#242f3e"}]},
+					{elementType: "labels.text.stroke", stylers: [{color: "#242f3e"}]},
+					{elementType: "labels.text.fill", stylers: [{color: "#746855"}]},
+					{
+						featureType: "administrative.locality",
+						elementType: "labels.text.fill",
+						stylers: [{color: "#d59563"}],
+					},
+					{
+						featureType: "poi",
+						elementType: "labels.text.fill",
+						stylers: [{color: "#d59563"}],
+					},
+					{
+						featureType: "poi.park",
+						elementType: "geometry",
+						stylers: [{color: "#263c3f"}],
+					},
+					{
+						featureType: "poi.park",
+						elementType: "labels.text.fill",
+						stylers: [{color: "#6b9a76"}],
+					},
+					{
+						featureType: "road",
+						elementType: "geometry",
+						stylers: [{color: "#38414e"}],
+					},
+					{
+						featureType: "road",
+						elementType: "geometry.stroke",
+						stylers: [{color: "#212a37"}],
+					},
+					{
+						featureType: "road",
+						elementType: "labels.text.fill",
+						stylers: [{color: "#9ca5b3"}],
+					},
+					{
+						featureType: "road.highway",
+						elementType: "geometry",
+						stylers: [{color: "#746855"}],
+					},
+					{
+						featureType: "road.highway",
+						elementType: "geometry.stroke",
+						stylers: [{color: "#1f2835"}],
+					},
+					{
+						featureType: "road.highway",
+						elementType: "labels.text.fill",
+						stylers: [{color: "#f3d19c"}],
+					},
+					{
+						featureType: "transit",
+						elementType: "geometry",
+						stylers: [{color: "#2f3948"}],
+					},
+					{
+						featureType: "transit.station",
+						elementType: "labels.text.fill",
+						stylers: [{color: "#d59563"}],
+					},
+					{
+						featureType: "water",
+						elementType: "geometry",
+						stylers: [{color: "#17263c"}],
+					},
+					{
+						featureType: "water",
+						elementType: "labels.text.fill",
+						stylers: [{color: "#515c6d"}],
+					},
+					{
+						featureType: "water",
+						elementType: "labels.text.stroke",
+						stylers: [{color: "#17263c"}],
+					},
+				],
+			});
+
+
+
+
+		const marker = new google.maps.Marker({
+			position: {
+				lat: parseFloat(latitude),
+				lng: parseFloat(longitude)
 			},
+			map,
+			title: "Hare Krishna",
+			icon: "https://manish-mahesh-talreja-bucket.s3.us-west-1.amazonaws.com/smiley-map.png"
 		});
-}
+        if (listingDetails != null) {
+			const contentString = `
+		<div id="content">
+			<div id="siteNotice"></div>
+			<h1 id="firstHeading" class="firstHeading">${listingDetails.title}</h1>
+			<div id="bodyContent">
+				<p><b>${listingDetails.price}</b>, ${listingDetails.description}</p>
+			</div>
+		</div>
+`;
+			const infoWindow = new google.maps.InfoWindow({
+				content: contentString,
+				ariaLabel: listingDetails.title,
+			});
+
+			marker.addListener("click", () => {
+				infoWindow.open({
+					anchor: marker,
+					map,
+				});
+			});
+		}
+
+
+	}
 </script>
-<script src= "https://maps.googleapis.com/maps/api/js?key=<%= googleMapsAPIKey %>&libraries=places&callback=initMap"> </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=<%= googleMapsAPIKey %>&libraries=places&callback=initMap"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
@@ -125,15 +240,15 @@
 			destination: "/",
 			newWindow: true,
 			close: true,
-			gravity: "top", // `top` or `bottom`
-			position: "right", // `left`, `center` or `right`
-			stopOnFocus: true, // Prevents dismissing of toast on hover
+			gravity: "top",
+			position: "right",
+			stopOnFocus: true,
 			style: {
 				background: "linear-gradient(to right, #00b09b, #96c93d)",
 			},
 			onClick: function () {
 
-			} // Callback after click
+			}
 		}).showToast();
 	}
 	else if (showToast === "false" && toastMessage.length > 3) {
@@ -151,7 +266,7 @@
 			},
 			onClick: function () {
 
-			} // Callback after click
+			}
 		}).showToast();
 	}
 	else if (showToast === "alert" && toastMessage.length > 3) {
@@ -186,35 +301,36 @@
 </script>
 
 <script>
-    let exampleModal = document.getElementById('reviewModal')
-    exampleModal.addEventListener('show.bs.modal', function (event) {
+	let exampleModal = document.getElementById('reviewModal')
+	exampleModal.addEventListener('show.bs.modal', function (event) {
 		let button = event.relatedTarget;
-        let title = button.getAttribute('data-bs-title');
-        let id = button.getAttribute('data-bs-id');
-        let modalTitle = exampleModal.querySelector('.modal-title');
-        modalTitle.textContent = title
-        let reviewForm = document.getElementById("reviewForm");
+		let title = button.getAttribute('data-bs-title');
+		let id = button.getAttribute('data-bs-id');
+		let modalTitle = exampleModal.querySelector('.modal-title');
+		modalTitle.textContent = title
+		let reviewForm = document.getElementById("reviewForm");
 		reviewForm.setAttribute("action", `/review/${id}`);
-});
+	});
 </script>
 <script>
-        function initAutocomplete()
-        {
-            let autocomplete = new google.maps.places.Autocomplete(document.getElementById("location"));
-            autocomplete.addListener("place_changed", function ()
-            {
-                let place = autocomplete.getPlace();
-                if (!place.geometry) return;
-                let locationData = {
-                    name: place.formatted_address,
-                    latitude: place.geometry.location.lat(),
-                    longitude: place.geometry.location.lng(),
-                };
-                console.log("Selected Location:", locationData);
-				document.querySelector("#coordinates").value = JSON.stringify(locationData);
-            });
-        }
-        window.onload = initAutocomplete;
-    </script>
+	function initAutocomplete() {
+		let autocomplete = new google.maps.places.Autocomplete(document.getElementById("location"));
+		autocomplete.addListener("place_changed", function () {
+			let place = autocomplete.getPlace();
+			if (!place.geometry) {
+				return;
+			}
+			let locationData = {
+				name: place.formatted_address,
+				latitude: place.geometry.location.lat(),
+				longitude: place.geometry.location.lng(),
+			};
+			console.log("Selected Location:", locationData);
+			document.querySelector("#coordinates").value = JSON.stringify(locationData);
+		});
+	}
+
+	window.onload = initAutocomplete;
+</script>
 </body>
 </html>
